update mox3 to 0.26.0
NOTE(dmllr): Switch to stestr
Change-Id: I2393af5b353a0cb9c2793259a650825480437a76

--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name mox3
 Name:           {{ py2name('mox3') }}
-Version:        0.25.0
+Version:        0.26.0
 Release:        0
 Summary:        An unofficial port of the Google mox framework to Python 3
 License:        {{ license('Apache-2.0') }}
@@ -8,15 +8,19 @@ Group:          Development/Languages/Python
 URL:            https://bugs.launchpad.net/python-mox3
 Source0:        https://files.pythonhosted.org/packages/source/m/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('coverage', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('fixtures') }}
 Requires:       {{ py2pkg('pbr') }}
 BuildArch:      noarch
+%ifpython3
+BuildRequires:  python3-dbm
+%endif
 %python_subpackages
 
 %description
@@ -51,9 +55,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %{__python2} setup.py build_sphinx
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %install
 %python_install
