--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystonemiddleware
 Name:           {{ py2name('keystonemiddleware') }}
-Version:        5.1.0
+Version:        5.2.0
 Release:        0
 Summary:        Middleware for OpenStack Identity
 License:        {{ license('Apache-2.0') }}
@@ -59,6 +59,7 @@ does not expose any CLI or Python API features.
 Summary:        Documentation for Middleware for OpenStack Identity
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description -n {{ py2name('keystonemiddleware') }}-doc
 Documentation for Middleware for OpenStack Identity.
@@ -76,7 +77,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 # generate html docs
 export PYTHONPATH=.
-sphinx-build -b html doc/source doc/build/html
+PBR_VERSION=%{version} sphinx-build -b html doc/source doc/build/html
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
