--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -20,6 +20,7 @@ Source4:        openstack-keystone.defaultconf
 Source5:        openstack-keystone.README.config
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Flask', py_versions=['py3']) }}
+BuildRequires:  {{ py2pkg('Flask-RESTful', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('WebTest', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('bcrypt', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('devel', py_versions=['py3']) }}
@@ -71,6 +72,7 @@ Summary:        Keystone Python libraries
 Group:          Applications/System
 Requires:       {{ py2pkg('Babel', py_versions=['py3']) }}
 Requires:       {{ py2pkg('Flask', py_versions=['py3']) }}
+Requires:       {{ py2pkg('Flask-RESTful', py_versions=['py3']) }}
 Requires:       {{ py2pkg('Paste', py_versions=['py3']) }}
 Requires:       {{ py2pkg('PasteDeploy', py_versions=['py3']) }}
 Requires:       {{ py2pkg('PyMySQL', py_versions=['py3']) }}
