fix Tempest url link error
Change-Id: I47d58fec020d554c21ae7e505f9d3c3144ff1a0a

--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -6,7 +6,7 @@ Release:        0
 Summary:        The OpenStack Integration Test Suite
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/tempest
+URL:            https://launchpad.net/tempest
 Source0:        https://files.pythonhosted.org/packages/source/T/Tempest/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
