added sphinx-feature-classification as build dependancy for nova
Change-Id: I2773696a2704d608a3bd3bc8bf450e9ea8788d27
Depends-On: https://review.openstack.org/587737

--- a/openstack/nova/nova.spec.j2
+++ b/openstack/nova/nova.spec.j2
@@ -81,6 +81,7 @@ BuildRequires:  {{ py2pkg('osprofiler') }}
 BuildRequires:  {{ py2pkg('psycopg2') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
+BuildRequires:  {{ py2pkg('sphinx-feature-classification') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-actdiag') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-seqdiag') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
