--- a/openstack/monasca-persister/monasca-persister.spec.j2
+++ b/openstack/monasca-persister/monasca-persister.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-persister' %}
-{% set upstream_version = upstream_version('1.10.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-persister/monasca-persister-master.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -10,7 +11,7 @@ Summary:        Consumes metrics and alarm state transitions from message queue 
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://files.pythonhosted.org/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 Source1:        openstack-monasca-persister.service
 Source2:        openstack-monasca-persister.logrotate
 BuildRequires:  openstack-macros
@@ -105,7 +106,7 @@ fi
 
 %files
 %license LICENSE
-%doc README.md ChangeLog
+%doc README.rst ChangeLog
 %dir %attr(-, root, monasca) %{_sysconfdir}/monasca
 %dir %attr(0750, monasca-persister, monasca) %{_var}/lib/{{ pypi_name }}
 %dir %attr(0750, monasca-persister, monasca) %{_var}/log/{{ pypi_name }}
