--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-ui' %}
-{% set upstream_version = upstream_version('1.12.1') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-ui/monasca-ui-master.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -16,7 +17,7 @@ Summary:        OpenStack Monasca Horizon plugin
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://files.pythonhosted.org/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 BuildRequires:  fdupes
 BuildRequires:  {{ py2pkg('horizon') }}
 BuildRequires:  openstack-macros
@@ -80,7 +81,7 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %{http_dashboard_dir}/openstack_dashboard/enabled/_50_admin_add_monitoring_panel.py
 %{http_dashboard_dir}/openstack_dashboard/conf/monitoring_policy.json
 %license LICENSE
-%doc ChangeLog README.md
+%doc ChangeLog README.rst
 
 %if 0%{?suse_version}
 %files -n grafana-monasca-ui-drilldown
@@ -90,7 +91,7 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 
 %files -n {{ py2pkg('horizon-plugin-monasca-ui') }}
 %license LICENSE
-%doc README.md
+%doc README.rst
 %{python2_sitelib}/monitoring
 %{python2_sitelib}/monasca_ui-*.egg-info
 %exclude %{http_dashboard_dir}/openstack_dashboard/enabled/_50_admin_add_monitoring_panel.pyc
