--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'glance_store' %}
-{% set upstream_version = upstream_version('0.24.0') %}
+{% set upstream_version = upstream_version('0.26.1') %}
 {% set rpm_release = '0' %}
 {% set source = url_pypi() %}
 Name:           {{ py2name('glance_store') }}
@@ -32,9 +32,9 @@ BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-swiftclient', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('python-cinderclient') }}
@@ -79,6 +79,7 @@ Summary:        Documentation for OpenStack Image Service Store Library
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description -n {{ py2name('glance_store') }}-doc
 Documentation for the Glance store library.
@@ -90,7 +91,7 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{python_build}
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
@@ -105,8 +106,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative glance-rootwrap
 
 %check
-%{python_expand rm -rf .testrepository
-PYTHON=$python $python setup.py testr
+%{python_expand rm -rf .stestr
+PYTHON=$python PYTHONPATH="." stestr run
 }
 
 %files %{python_files}
