--- a/openstack/python-cinderclient/python-cinderclient.spec.j2
+++ b/openstack/python-cinderclient/python-cinderclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-cinderclient' %}
-{% set upstream_version = upstream_version('3.5.0') %}
+{% set upstream_version = upstream_version('4.0.1') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -73,7 +73,8 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 %build
 %{python_build}
 
-%{__python2} setup.py build_sphinx --builder=html,man
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
+PBR_VERSION={{ upstream_version }} sphinx-build -b man doc/source doc/build/man
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
