stestr 2.2: Avoid python 2.x runs
We're only pulling in the Python 3.x version of stestr, so
python 2.x tests will fail. Avoid running those

Change-Id: Ia0bbb26e92d8564c9f4388e0aede685e854cbd89

--- a/openstack/glance/glance.spec.j2
+++ b/openstack/glance/glance.spec.j2
@@ -290,7 +290,7 @@ exit 0
 
 %check
 %if 0%{?suse_version}
-OS_TEST_PATH=./glance/tests/unit PYTHONPATH=. stestr run
+PYTHON=python3 OS_TEST_PATH=./glance/tests/unit PYTHONPATH=. stestr run
 %endif
 %if 0%{?rdo}
 OS_TEST_PATH=./glance/tests/unit PYTHONPATH=. stestr-3 run
