--- a/openstack/monasca-statsd/monasca-statsd.spec.j2
+++ b/openstack/monasca-statsd/monasca-statsd.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'monasca-statsd' %}
-{% set upstream_version = upstream_version('1.10.0') %}
+{% set upstream_version = upstream_version('1.10.1') %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -12,8 +12,10 @@ Group:          Development/Languages/Python
 URL:            https://wiki.openstack.org/wiki/Monasca
 Source0:        https://files.pythonhosted.org/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('nose') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('six') }}
 Requires:       {{ py2pkg('six') }}
@@ -28,6 +30,7 @@ Python Statsd library for sending statsd messages via the Monasca Agent
 
 %build
 %{py2_build}
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 
 %install
 %{py2_install}
@@ -37,7 +40,7 @@ nosetests monascastatsd --verbose
 
 %files
 %license LICENSE
-%doc README.md ChangeLog
+%doc README.rst ChangeLog
 %{python2_sitelib}/monascastatsd
 %{python2_sitelib}/*.egg-info
 
