cinder: add sphinx-feature-classification
Change-Id: I8682d4517333f2d42e77b842259dfb52a270acfc

--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -169,6 +169,7 @@ Summary:        Documentation for OpenStack Volume Service
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('sphinx-feature-classification') }}
 BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description doc
