--- a/openstack/openstacksdk/openstacksdk.spec.j2
+++ b/openstack/openstacksdk/openstacksdk.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'openstacksdk' %}
-{% set upstream_version = upstream_version('0.11.3') %}
+{% set upstream_version = upstream_version('0.17.2') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -11,8 +11,6 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
-# https://review.openstack.org/#/c/539685/
-Patch1:         0001-Let-enforcer.py-work-under-both-py2-and-py3.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('PyYAML', py_versions=['py2', 'py3']) }}
@@ -41,7 +39,6 @@ BuildRequires:  {{ py2pkg('requestsexceptions', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PyYAML') }}
@@ -107,8 +104,7 @@ sed -i 's/^warning-is-error.*/warning-is-error=0/g' setup.cfg
 
 %build
 %python_build
-export PYTHONPATH=.
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} sphinx-build -b html doc/source doc/build/html
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
@@ -122,9 +118,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %python_uninstall_alternative openstack-inventory
 
 %check
-%{python_expand rm -rf .testrepository
-stestr run
-}
+export OS_LOG_CAPTURE=true
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
