Fix macro expansion error
It seems the first line of a multiline macro is special
and non-option like stuff looks weird to rpm.

Use the one line python_exec macro for avoiding this.

Change-Id: I65469423125a56b2c0239670a9afdc0de207b60e

--- a/openstack/python-manilaclient/python-manilaclient.spec.j2
+++ b/openstack/python-manilaclient/python-manilaclient.spec.j2
@@ -88,9 +88,7 @@ install -p -D -m 644 tools/manila.bash_completion %{buildroot}%{_sysconfdir}/bas
 rm -f manilaclient/tests/unit/test_shell.py
 rm -f manilaclient/tests/unit/test_functional_utils.py
 rm -rf manilaclient/tests/functional
-%{python_expand rm -rf .testrepository
-stestr --test-path=manilaclient/tests/unit/ run
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %doc README.rst
