monasca: various build fixes against current master
monasca-ceilometer needs more work, removing for now.

Change-Id: I6ef2ebee3c51fee7a2aa2049d945adbc0fd67927

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -194,7 +194,7 @@ python setup.py test
 %{_sysconfdir}/polkit-1/rules.d/49-monasca-agent.rules
 
 %files -n python-%{sname}
-%doc README.md
+%doc README.rst
 %license LICENSE
 %{_bindir}/monasca-collector
 %{_bindir}/monasca-forwarder
