--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'stevedore' %}
-{% set upstream_version = upstream_version('1.28.0') %}
+{% set upstream_version = upstream_version('1.29.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -13,10 +13,11 @@ URL:            https://docs.openstack.org/developer/stevedore/
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('docutils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('pbr') }}
 Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
@@ -36,7 +37,7 @@ dynamically loaded extensions.
 %package -n python-stevedore-doc
 Summary:        Documentation for %{name}
 Group:          Documentation/HTML
-BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2']) }}
+BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2', 'py3']) }}
 Provides:       %{python_module stevedore-doc = %{version}}
 
 %description -n python-stevedore-doc
@@ -55,23 +56,21 @@ This package contains documentation in HTML format.
 %prep
 %autosetup -p1 -n {{ pypi_name }}-%{version}
 %py_req_cleanup
-sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
+
 
 %build
 %python_build
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} PYTHONPATH=. sphinx-build -b html doc/source doc/build/html
 # remove the Sphinx-build leftovers
-rm -rf html/.{doctrees,buildinfo}
+rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
 %python_install
 
 %check
-%{python_expand rm -rf .testrepository
-$python setup.py test
-}
+%python_exec -m stestr.cli run
 
 %files %{python_files}
 %license LICENSE
