--- a/openstack/karbor-dashboard/karbor-dashboard.spec.j2
+++ b/openstack/karbor-dashboard/karbor-dashboard.spec.j2
@@ -33,8 +33,8 @@ Requires:      {{ py2pkg('Babel') }}
 Requires:      {{ py2pkg('Django') }}
 Requires:      {{ py2pkg('PyYAML') }}
 Requires:      {{ py2pkg('django-babel') }}
-Requires:      {{ py2pkg('django-compressor') }}
 Requires:      {{ py2pkg('django-pyscss') }}
+Requires:      {{ py2pkg('django_compressor') }}
 Requires:      {{ py2pkg('python-karborclient') }}
 Requires:      {{ py2pkg('pbr') }}
 
